--- a/mobile-src/android/Application/src/main/res/values/strings.xml
+++ b/mobile-src/android/Application/src/main/res/values/strings.xml
@@ -21,5 +21,8 @@
     <string name="clear_cache_complete_toast">Caches have been cleared</string>
     <string name="imageview_description">Image Thumbnail</string>
     <string name="no_network_connection_toast">No network connection found</string>
-
+    <string name="saved">Saved</string>
+    <string name="save_error">Error while saving an image</string>
+    <string name="save_all">Save All</string>
+    <string name="save_to_gallery">Save to gallery</string>
 </resources>
