--- a/mobile-template/android/res/values/strings.xml
+++ b/mobile-template/android/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">${name}</string>
+    <string name="backendUrl">${backendUrl}</string>
     <string name="clear_cache_complete_toast">Caches have been cleared</string>
     <string name="clear_cache_menu">Clear Caches</string>
     <string name="imageview_description">Image Thumbnail</string>
@@ -8,6 +9,9 @@
 
  It demonstrates how to load large bitmaps efficiently off the main UI thread, caching bitmaps (both in memory and on disk), managing bitmap memory and displaying bitmaps in UI elements such as ViewPager and ListView/GridView."</string>
     <string name="no_network_connection_toast">No network connection found</string>
+    <string name="refresh">refresh</string>
+    <string name="refresh_failed">Failed to refresh the image list</string>
+    <string name="refreshed">Refreshed</string>
     <string name="save_all">Save All</string>
     <string name="save_error">Error while saving an image</string>
     <string name="save_to_gallery">Save to gallery</string>
