--- a/mobile-src/android/Application/src/main/res/values/strings.xml
+++ b/mobile-src/android/Application/src/main/res/values/strings.xml
@@ -20,8 +20,12 @@
     <string name="backendUrl">http://imagegallery.designmyapp.mobi/</string>
     <string name="clear_cache_menu">Clear Caches</string>
     <string name="clear_cache_complete_toast">Caches have been cleared</string>
+    <string name="failed_create_file">Couldn\'t create a file</string>
     <string name="imageview_description">Image Thumbnail</string>
+    <string name="no_camera">Couldn\'t find a camera</string>
     <string name="no_network_connection_toast">No network connection found</string>
+    <string name="picture_upload_success">Picture uploaded</string>
+    <string name="picture_upload_failure">Failed to upload the picture</string>
     <string name="refresh">refresh</string>
     <string name="refreshed">Refreshed</string>
     <string name="refresh_failed">Failed to refresh the image list</string>
@@ -29,4 +33,5 @@
     <string name="save_error">Error while saving an image</string>
     <string name="save_all">Save All</string>
     <string name="save_to_gallery">Save to gallery</string>
+    <string name="take_picture">Take a picture</string>
 </resources>
