--- a/mobile-template/android/res/values/strings.xml
+++ b/mobile-template/android/res/values/strings.xml
@@ -4,11 +4,15 @@
     <string name="backendUrl">${backendUrl}</string>
     <string name="clear_cache_complete_toast">Caches have been cleared</string>
     <string name="clear_cache_menu">Clear Caches</string>
+    <string name="failed_create_file">"Couldn't create a file"</string>
     <string name="imageview_description">Image Thumbnail</string>
     <string name="intro_message">"This is a sample application for the Android Training class &amp;quot;Displaying Bitmaps Efficiently&amp;quot; (http://developer.android.com/training/displaying-bitmaps/).
 
  It demonstrates how to load large bitmaps efficiently off the main UI thread, caching bitmaps (both in memory and on disk), managing bitmap memory and displaying bitmaps in UI elements such as ViewPager and ListView/GridView."</string>
+    <string name="no_camera">"Couldn't find a camera"</string>
     <string name="no_network_connection_toast">No network connection found</string>
+    <string name="picture_upload_failure">Failed to upload the picture</string>
+    <string name="picture_upload_success">Picture uploaded</string>
     <string name="refresh">refresh</string>
     <string name="refresh_failed">Failed to refresh the image list</string>
     <string name="refreshed">Refreshed</string>
@@ -16,4 +20,5 @@
     <string name="save_error">Error while saving an image</string>
     <string name="save_to_gallery">Save to gallery</string>
     <string name="saved">Saved</string>
+    <string name="take_picture">Take a picture</string>
 </resources>
